new:伙伴系统还差一个free_pages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.8)
 project(mygos)
 
-set(CMAKE_EXE_LINKER_FLAGS -T link_script_riscv.ld)
+set(CMAKE_EXE_LINKER_FLAGS -T link_script_riscv.ld -nostdlib)
 set(SRC_LIST src/algs/kstring.c
         src/algs/kstring.h
         src/io/kput.S
@@ -13,7 +13,13 @@ set(SRC_LIST src/algs/kstring.c
         include/endian.h
         src/device_tree/device_tree_parser.c
         src/device_tree/device_tree_parser.h
-        include/typedefs.h)
+        include/typedefs.h
+        src/mem/page.c
+        src/mem/page.h
+        include/list.h
+        src/algs/math.c
+        src/algs/kmath.h
+)
 
 add_executable(mygos ${SRC_LIST})
 
